docs: #16 ページのリード文を確定し design.md に3点を追記する
- style.md S-02 にリード文（目次直後・最初のL2見出しより前）の規約と根拠を追加
- design.md §3・§4 のページアウトラインにリード文の行と位置の規約を追加
- 第2部の3ページの導入文を目次の直後へ移し、文頭を主語のある言い切りに直す
- #15 の decide 3件を design.md に規定化（§13 画像の配置／§8 陳腐化した例示／§8 外部の挙動）
- checks/task-16.md にゲート1〜9 の実行結果を記録し、reviews 3件と steering.md を更新

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>